--- a/GoFE/Lesson-4/Homework/task3.css
+++ b/GoFE/Lesson-4/Homework/task3.css
@@ -7,5 +7,12 @@ li {
     list-style: none;
     display: inline-block;
     text-transform: uppercase;
+    color: #a64dff;
+    font-size: 20px;
+    padding: 2px 10px;
+}
 
+.button {
+    border: 1px solid #a0a0a0;
+    border-radius: 5px;
 }
