--- a/GoFE/Lesson-5/Homework/task2.css
+++ b/GoFE/Lesson-5/Homework/task2.css
@@ -62,7 +62,6 @@ ul {
 li {
     border-bottom: 1px solid white;
     padding: 8px 0 8px 64px;
-
 }
 
 li:nth-child(odd) {
@@ -71,4 +70,9 @@ li:nth-child(odd) {
 
 li:nth-child(even) {
     background-color: #f5f5f6;
+}
+
+li:before {
+    content: '';
+    background-image: url(before.png);
 }
