--- a/GoFE/Lesson-8/Homework/task3.css
+++ b/GoFE/Lesson-8/Homework/task3.css
@@ -141,7 +141,7 @@
         width: 75%;
         padding: 15px 0;
     }
-    
+
 }
 
 /**********middle-section**********/
@@ -150,10 +150,41 @@
     max-width: 1400px;
     background-image: url(middle.png);
     margin: 0 auto;
-    font-size: 45px;
     box-sizing: border-box;
-    font-family: 'Trebuchet MS';
+    font-family: 'Open Sans';
     overflow: hidden;
+    font-size: 0;
+    min-height: 577px;
+}
+
+.middle-section_container {
+    width: 60%;
+    padding: 40px 189px 20px;
+    text-align: left;
+}
+
+.middle-section_header {
+    font-size: 26px;
+    color: #ee8129;
+    line-height: 1.85;
+    font-weight: bold;
+}
+
+.middle-section_content {
+    font-size: 19px;
+    color: #f5f5f6;
+    font-style: italic;
+}
+
+.middle-section_list {
+    font-size: 14px;
+    color: #888c94;
+    padding: 25px 0 0 38px;
+}
+
+.middle-section_list_item {
+    line-height: 2;
+    margin: 15px 0;
 }
 
 /**********Offer**********/
@@ -161,6 +192,7 @@
 .offer {
     font-family: 'Trebuchet MS';
     font-size: 0;
+    padding-top: 60px;
 }
 
 .title {
