--- a/Task Jooble/main.css
+++ b/Task Jooble/main.css
@@ -16,6 +16,7 @@
 }
 
 .offer__wraper {
+    width: 1876px;
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     padding: 180px 0 200px 50px;
@@ -76,6 +77,7 @@
 }
 
 .offer__button {
+    position: relative;
     float: left;
     background-color: #d42627;
     text-transform: uppercase;
@@ -89,6 +91,6 @@
 .offer__button:before {
     content: url("free.png");
     position: absolute;
-    right: 374px;
+    right: 0px;
     bottom: 0px;
 }
