--- a/Task Jooble/main.css
+++ b/Task Jooble/main.css
@@ -13,6 +13,7 @@
     background-image: url(background.jpg);
     padding: 206px 30px 230px 16px;
     font-family: sans-serif;
+    width: 1920px;
 }
 
 .offer__wraper {
