--- a/Test/main.css
+++ b/Test/main.css
@@ -9,11 +9,18 @@
     text-decoration: none;
 }
 
+body
+{
+    height: 5000px;
+}
+
 .offer {
-    background-image: url(background.jpg);
+    background: url(background.jpg) no-repeat center center;
     padding: 206px 30px 230px 16px;
     font-family: sans-serif;
     width: 1920px;
+    height: 1200px;
+    position: fixed;
 }
 
 .offer__wraper {
@@ -24,6 +31,7 @@
     border-radius: 15px;
     overflow: hidden;
     position: relative;
+    display: none;
 }
 
 .offer__header {
@@ -31,11 +39,12 @@
     font-size: 84px;
 }
 
-.offer__text {
+.offer__paragraph {
     font-style: italic;
     font-size: 56px;
     padding: 1em 0;
 }
+
 
 .offer__form {
     position: relative;
